syntax = "proto3";

package fileengine;
option java_package = "com.rafay.fileengine.proto";
option java_outer_classname = "FileEngineProto";

// Message for sending a document's word count
message IndexRequest {
  string client_id = 1;
    string api_key = 2; // ← New field
    string file_path = 3;
    map<string, int32> word_frequencies = 4;
}

// Response after indexing a document
message IndexReply {
  string status = 1; // "SUCCESS", "FAILURE"
  string message = 2;
}

// Request to search for keywords
message SearchRequest {
   string client_id = 1;
    string api_key = 2; // ← New field
    repeated string query_terms = 3;
}

// Single search result
message SearchResult {
  string document_path = 1;
  int32 total_frequency = 2;
}

// Full search response
message SearchReply {
  repeated SearchResult results = 1;
  string error_message = 2;
}
// New messages for registration
message RegisterRequest {
    string client_id = 1;
}

message RegisterReply {
    string api_key = 1;
    string status = 2;
    string message = 3;
}

// The main service
service IndexService {
    // Register a client to get an API key
    rpc RegisterClient(RegisterRequest) returns (RegisterReply);

    // Send indexed document
    rpc ComputeIndex(IndexRequest) returns (IndexReply);

    // Request a search
    rpc ComputeSearch(SearchRequest) returns (SearchReply);
}